 * tagmanager/tm_source_file.c:
   Update source files upon creation.
 * data/c99.tags:
   Update C tags for glibc 2.9.
 * src/callbacks.c, src/toolbar.c:
   Fix broken non-incremental search with the toolbar search entry when
   pressing Enter (closes #2638180).
 * plugins/splitwindow.c:
   Fix possible crash on non-32-bit systems (patch by
   Wolfgang Ocker, thanks).


2009-02-26  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * plugins/vcdiff.c, plugins/Makefile.am, po/POTFILES.in:
   Removed deprecated plugin VC Diff


2009-02-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/templates.c:
   Fix wrong Fortran 90 comment characters when inserting templates.
 * doc/geany.html, doc/geany.txt, geany.glade, src/callbacks.c,
   src/callbacks.h, src/editor.c, src/interface.c, src/keybindings.c,
   src/keybindings.h, src/main.c, src/plugindata.h, src/vte.c,
   src/vte.h, THANKS:
   Add 'Send Selection to Terminal' command to the Edit->Format menu
   (initial patch by David Gleich, thanks).
 * geany.glade, src/interface.c:
   Fix mnemonic for the Edit->Preferences menu item.


2009-02-24  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * configure.in, plugins/Makefile.am:
   Enable socket support when cross-compiling.
   Enable plugin compilation when cross-compiling.
 * src/msgwindow.c:
   Fix missing NULL checks when reading the colour value of compiler
   output messages.
 * src/main.c, src/win32.c, src/win32.h:
   On Windows, change the working directory to the Geany installation
   path at startup to avoid unwanted directory locking(closes #2626124).
 * src/encoding.c:
   Fix broken selection of "Document->Set Encoding" menu items.
 * src/document.c, tagmanager/include/tm_source_file.h,
   tagmanager/include/tm_work_object.h, tagmanager/tm_project.c,
   tagmanager/tm_source_file.c, tagmanager/tm_tag.c,
   tagmanager/tm_work_object.c, tagmanager/tm_workspace.c:
   Don't let the tagmanager automatically reparse files if they