@@ -4,25 +4,35 @@ Version:       @VERSION@
 Release:       1
 License:       GPL2
 Group:         Development/Tools
-Vendor:        Enrico Tröger <enrico.troeger@uvena.de>
-Packager:      Enrico Tröger <enrico.troeger@uvena.de>
-Source:        http://files.uvena.de/geany/%{name}-%{version}.tar.bz2
+Vendor:        The Geany developer team <info@geany.org>
+Packager:      Dominic Hopf <dmaphy@gmail.com>
+Source:        http://download.geany.org/%{name}-%{version}.tar.gz
 URL:           http://www.geany.org/
 BuildRoot:     %{_tmppath}/%{name}-%{version}-%{release}-root
 Requires:      glib2, gtk2, pango
 BuildRequires: glib2-devel, gtk2-devel, pango-devel
 
 %description
-Geany is a small and fast editor with basic features of an integrated development environment.
+Geany is a small and lightweight Integrated Development Environment. It
+was developed to provide a small and fast IDE, which has only a few
+dependencies from other packages. Another goal was to be as independent
+as possible from a special Desktop Environment like KDE or GNOME -
+Geany only requires the GTK2 runtime libraries.
 
-Some features:
-- syntax highlighting
-- code completion
-- code folding
-- call tips
-- folding
-- many supported filetypes like C, Java, PHP, HTML, Python, Perl, Pascal
-- symbol lists
+Some basic features of Geany:
+
+- Syntax highlighting
+- Code folding
+- Symbol name auto-completion
+- Construct completion/snippets
+- Auto-closing of XML and HTML tags
+- Call tips
+- Many supported filetypes including C, Java, PHP, HTML, Python, Perl, Pascal, and others
+- Symbol lists
+- Code navigation
+- Build system to compile and execute your code
+- Simple project management
+- Plugin interface
 
 %prep
 %setup -q
